--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "readxlsb"]
+	path = readxlsb
+	url = https://github.com/velofrog/readxlsb
+	shallow = true
+	registered = true
